--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,427 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* **************************************************************** Start Main Rules **************************************************************/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
+:root {
+  --main-text: #aaa;
+  --main-font: 'Poppins', sans-serif;
+  --main-color: #717fe0;
+  --second-color: #fff;
+  --main-bg: #272b30;
+  --header-wgight: 700;
+  --shadow: rgba(145, 158, 171, .2) 0px 2px 4px -1px, rgba(145, 158, 171, .14) 0px 4px 5px 0px, rgba(145, 158, 171, .12) 0px 1px 10px 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: var(--main-font);
+}
+
+.register,.login {
+  background: linear-gradient(29deg, rgba(2, 0, 36, 1) 0%, rgba(113, 127, 224, 1) 50%, rgba(0, 212, 255, 1) 100%);
+}
+.btn:disabled{
+  color: #fff;
+  pointer-events: none;
+  background-color: var(--main-color);
+  border-color: var(--main-color);
+  opacity: 0.65;
+}
+
+/* **************************************************************** Start loading **************************************************************/
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 65px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: var(--second-color);
+  z-index: 59864875;
+}
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 4px solid var(--main-color);
+  border-right: 4px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-bottom: 4px solid var(--main-color);
+  border-left: 4px solid transparent;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* **************************************************************** Start Navbar **************************************************************/
+nav {
+  background-color: var(--main-bg)
+}
+
+.navbar .navbar-nav .nav-link {
+  color: var(--second-color);
+  margin-right: 15px;
+}
+
+.navbar .navbar-nav .nav-link.active {
+  color: var(--main-color);
+}
+
+.navbar .navbar-nav .nav-link:hover {
+  color: var(--main-color);
+}
+
+.navbar-toggler {
+  border: 3px solid var(--second-color);
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
+.cart {
+  font-size: 10px !important;
+  top: 3px;
+  background-color: var(--main-color);
+  color: var(--second-color);
+  padding: 6px;
+}
+
+.cartsidbar {
+  font-size: 14px;
+}
+
+.cusror {
+  cursor: pointer;
+}
+
+/* **************************************************************** Start Home **************************************************************/
+.slider1 {
+  background-image: url(../src/Assets/slide3.jpg);
+  background-size: cover;
+  background-position: center center;
+}
+
+.slider2 {
+  background-image: url(../src/Assets/slide1.jpg);
+  background-size: cover;
+  background-position: center center;
+}
+
+.layout {
+  background-color: rgba(0, 0, 0, 0.2)
+}
+
+.layout h1,
+.all h2 {
+  font-family: var(--second-font);
+  font-size: 60px;
+  font-weight: var(--header-wgight);
+  line-height: 1.1;
+  text-transform: uppercase;
+}
+
+.layout h3 {
+  font-family: var(--main-font);
+  font-size: 28px;
+  line-height: 1.2857;
+}
+
+.btn-bg {
+  background-color: var(--main-color);
+  color: var(--second-color) !important;
+  transition: all 0.5s;
+}
+
+.btn-bg:hover {
+  background-color: var(--second-color);
+  color: var(--main-color) !important;
+}
+
+.item {
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.text {
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.text span {
+  color: var(--second-color);
+  font-weight: bold;
+  text-decoration: none;
+  border-bottom: 2px solid var(--second-color);
+}
+
+.layer {
+  background-color: rgba(113, 128, 224, 0.8) !important;
+  position: absolute;
+  top: 120%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  transition: all 0.5s;
+}
+
+.item:hover .layer {
+  top: 0;
+  color: var(--second-color);
+}
+
+.item:hover .info {
+  display: none;
+}
+
+.cat a {
+  color: #000;
+}
+
+.inform h3 {
+  font-size: 45px;
+  font-weight: bold;
+}
+
+/* **************************************************************************************** Start Footrt ***************************************************************/
+.footer {
+  background-color: var(--main-bg);
+}
+
+.footer .categories {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.footer .categories a {
+  margin-bottom: 15px;
+  text-decoration: none;
+  color: #aaa;
+  transition: all 0.5s;
+}
+
+.footer .categories a:hover {
+  color: var(--main-color);
+}
+
+.social i {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.footer input {
+  background-color: transparent;
+}
+
+.form-control:focus {
+  border-color: var(--main-color);
+  background-color: transparent;
+  box-shadow: none;
+  color: var(--main-bg);
+}
+.footer .form-control:focus {
+  border-color: var(--main-color);
+  background-color: transparent;
+  box-shadow: none;
+  color: var(--second-color);
+}
+
+/* **************************************************************************************** Start All  ***************************************************************/
+.product {
+  box-shadow: var(--shadow);
+  overflow: hidden;
+}
+
+.product .view {
+  background-color: rgba(113, 128, 224, 0.8) !important;
+  top: 120%;
+  right: 0;
+  left: 0;
+  bottom: 107px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.product:hover .view {
+  top: 0;
+}
+
+.product .btn {
+  background-color: var(--second-color);
+  color: var(--main-color);
+}
+
+.product .btn:first-child:active {
+  background-color: var(--second-color);
+  color: var(--main-color);
+  border-color: var(--main-color);
+}
+
+.alll {
+  position: relative;
+  top: 90px;
+}
+
+.all {
+  position: relative;
+  top: 90px;
+}
+
+.all img {
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.all span {
+  color: var(--main-color);
+}
+
+.links ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.links ul li {
+  margin-right: 15px;
+}
+
+.links ul li a {
+  color: #000;
+  text-decoration: none;
+}
+
+.test {
+  padding: 10px 15px;
+  color: var(--second-color) !important;
+  background-color: var(--main-color) !important;
+  border-radius: 7px;
+}
+
+.item a {
+  text-decoration: none;
+  color: #000;
+}
+
+.blog {
+  overflow: hidden;
+}
+
+.blog img {
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.blog:hover img {
+  transform: scale(1.07);
+}
+
+.blog .header {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
+/* **************************************************************************************** Start detailes  ***************************************************************/
+.close {
+  font-size: 30px;
+  position: relative;
+  z-index: 1000;
+}
+
+.close i {
+  position: absolute;
+  right: 4%;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.close i:hover {
+  color: #f00c0c;
+}
+
+.btn-bg2 {
+  background-color: var(--main-color);
+  color: var(--second-color) !important;
+  transition: all 0.5s;
+}
+
+.btn-bg2:hover {
+  background-color: var(--main-bg);
+  color: var(--second-color) !important;
+}
+
+.accordion-button:not(.collapsed) {
+  color: var(--main-color);
+  background-color: var(--bs-accordion-active-bg);
+  box-shadow: inset 0 calc(-1 * var(--main-color)) 0 var(--main-color);
+}
+
+/* ************************************************************* start contact ***********************************************/
+.contact form input,
+.contact form textarea {
+  border: 0;
+  border-radius: 5px;
+  padding: 10px;
+  background: #f4f4f4;
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: 'mohamed-m';
+}
+
+.contact .form-control:focus {
+  color: #212529;
+  background-color: #f4f4f4;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem var(--main-color) !important;
+}
+
+.contact .icon i {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  border-radius: 50%;
+  background-color: #f7f7f7;
 }
